BoardResponse 추가함